# slitherio-ml

./: .gitignore  README.md  pyproject.toml
slither/: length.html
tests/: test_slither.py
